--- a/note.ipynb
+++ b/note.ipynb
@@ -2,63 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "20781530",
+   "execution_count": 25,
+   "id": "cc76fbc5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pathlib\n",
     "import tensorflow as tf\n",
-    "import numpy as np"
+    "from tensorflow.keras import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d402134a",
+   "execution_count": 26,
+   "id": "517ee400",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/stack_overflow_16k.tar.gz\n",
+      "6053888/6053168 [==============================] - 0s 0us/step\n",
+      "6062080/6053168 [==============================] - 0s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
-    "def _bytes_feature(value):\n",
-    "    \"\"\"Returns a bytes_list from a string / byte.\"\"\"\n",
-    "    if isinstance(value, type(tf.constant(0))):\n",
-    "        value = value.numpy() # BytesList won't unpack a string from an EagerTensor.\n",
-    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
+    "data_url = 'https://storage.googleapis.com/download.tensorflow.org/data/stack_overflow_16k.tar.gz'\n",
     "\n",
-    "def _float_feature(value):\n",
-    "    \"\"\"Returns a float_list from a float / double.\"\"\"\n",
-    "    return tf.train.Feature(float_list=tf.train.FloatList(value=[value]))\n",
+    "dataset_dir = utils.get_file(\n",
+    "    origin=data_url,\n",
+    "    untar=True,\n",
+    "    cache_dir='stack_overflow',\n",
+    "    cache_subdir='')\n",
     "\n",
-    "def _int64_feature(value):\n",
-    "    \"\"\"Returns a int64_list from a bool / enum / int / uint.\"\"\"\n",
-    "    return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))"
+    "dataset_dir = pathlib.Path(dataset_dir).parent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c12456f5",
+   "execution_count": 27,
+   "id": "e15b73b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WindowsPath('/tmp/.keras/README.md'),\n",
+       " WindowsPath('/tmp/.keras/stack_overflow_16k.tar.gz'),\n",
+       " WindowsPath('/tmp/.keras/test'),\n",
+       " WindowsPath('/tmp/.keras/train')]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def serialize_example(feature0, feature1, feature2, feature3):\n",
-    "    feature = {\n",
-    "        'feature0': _int64_feature(feature0),\n",
-    "        'feature1': _int64_feature(feature1),\n",
-    "        'feature2': _bytes_feature(feature2),\n",
-    "        'feature3': _float_feature(feature3),\n",
-    "    }\n",
-    "    \n",
-    "    example_proto = tf.train.Example(features=tf.train.Features(feature=feature))\n",
-    "    return example_proto.SerializeToString()"
+    "list(dataset_dir.iterdir())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab048593",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
