from M1 Macbook Air

--- a/note.ipynb
+++ b/note.ipynb
@@ -2,67 +2,184 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "cc76fbc5",
+   "execution_count": null,
+   "id": "4fe98eb0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pathlib\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import utils"
+    "import os\n",
+    "import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "517ee400",
+   "execution_count": null,
+   "id": "6dda5b65",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/stack_overflow_16k.tar.gz\n",
-      "6053888/6053168 [==============================] - 0s 0us/step\n",
-      "6062080/6053168 [==============================] - 0s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_url = 'https://storage.googleapis.com/download.tensorflow.org/data/stack_overflow_16k.tar.gz'\n",
-    "\n",
-    "dataset_dir = utils.get_file(\n",
-    "    origin=data_url,\n",
-    "    untar=True,\n",
-    "    cache_dir='stack_overflow',\n",
-    "    cache_subdir='')\n",
-    "\n",
-    "dataset_dir = pathlib.Path(dataset_dir).parent"
+    "p_file = pathlib.Path('/Users/temp/file.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "e15b73b7",
+   "execution_count": null,
+   "id": "98c523f1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WindowsPath('/tmp/.keras/README.md'),\n",
-       " WindowsPath('/tmp/.keras/stack_overflow_16k.tar.gz'),\n",
-       " WindowsPath('/tmp/.keras/test'),\n",
-       " WindowsPath('/tmp/.keras/train')]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "list(dataset_dir.iterdir())"
+    "print(p_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc29493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_file.is_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13a9b008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(type(p_file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7517c2b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_dir = pathlib.Path('/Users/temp/dir')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de622abc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(p_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dde3765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(type(p_dir))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77f2989c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_new_file = pathlib.Path('/Users/temp/new_file.txt')\n",
+    "print(p_new_file.exists())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e91e84de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathlib.Path('/Users/temp/new_file2.txt').touch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1728fe7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(pathlib.Path('/Users/temp').iterdir())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "003fa3eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_dir.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "547d8ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_sub_dir_file = p_dir / 'sub_dir' / 'file2.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0e17723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_sub_dir_file.is_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a289cb70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_sub_dir_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d05c0b91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc95d512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_file.samefile(p_file_join)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbe7e69b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -81,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
